--- a/docs/bib.bib
+++ b/docs/bib.bib
@@ -553,3 +553,18 @@ year = {2011}
   isbn      = {3-540-42197-1},
   bibsource = {DBLP, http://dblp.uni-trier.de}
 }
+@inproceedings{DBLP:journals/corr/abs-1006-0401,
+  author    = {Norbert Th. M{\"{u}}ller and
+               Margarita V. Korovina},
+  title     = {Making big steps in trajectories},
+  booktitle = {Proceedings Seventh International Conference on Computability and
+               Complexity in Analysis, {CCA} 2010, Zhenjiang, China, 21-25th June
+               2010.},
+  pages     = {106--119},
+  year      = 2010,
+  url       = {http://dx.doi.org/10.4204/EPTCS.24.15},
+  doi       = {10.4204/EPTCS.24.15},
+  timestamp = {Mon, 28 Oct 2013 16:56:55 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/abs-1006-0401},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
