--- a/docs/bib.bib
+++ b/docs/bib.bib
@@ -13,7 +13,7 @@
 
 @book {Weihrauch,
     AUTHOR = {Weihrauch, Klaus},
-     TITLE = {Computable Analysis},
+     TITLE = {{C}omputable {A}nalysis},
       NOTE = {An Introduction},
  PUBLISHER = {Springer},
    ADDRESS = {Berlin/Heidelberg},
@@ -464,7 +464,7 @@ year = {2011}
 }
 @inproceedings{Mueller00,
   author    = {Norbert Th. M{\"u}ller},
-	title     = {The iRRAM: Exact Arithmetic in C++},
+	title     = {The {iRRAM}: Exact Arithmetic in {C}++},
   booktitle = {CCA},
   year      = {2000},
   pages     = {222-252},
