abstract and minor changes for tests etc.

--- a/docs/abstract.tex
+++ b/docs/abstract.tex
@@ -30,7 +30,7 @@ Examples include Differentiation, Integration or solving Initial Value Problems 
 Such problems commonly occur in applications in science and engineering and are heavily studied in numerical analysis.
 
 However, results from real complexity suggest that many basic operators are computationally hard. 
-For example, parametric maximization relates to the $\p$ vs. $\np$ problem \cite{MR666209} and integration to the stronger $\fp$ vs. $\sharpp$ problem \cite{MR748898} in the sense that the complexity classes are equal if there is an algorithm for those operators that maps polynomial time computable functions to polynomial time computable functions.
+For example, parametric maximization relates to the $\p$ vs. $\np$ problem \cite{MR666209} and integration to the stronger $\fp$ vs. $\sharpp$ problem \cite{MR748898} in the sense that the complexity classes are equal if those operators map polynomial time computable functions to polynomial time computable functions.
 This remains true even if one restricts the input to smooth functions.
 However, when only analytic functions are considered, many operators that are hard in the general case become computable in polynomial time \cite{Kawamura2012}.
 It is therefore desirable to restrict to analytic functions whenever possible.
