--- a/docs/analytic.tex
+++ b/docs/analytic.tex
@@ -151,7 +151,7 @@ Then
 $$ b_{i_1,\dots, \i_d} = (i_j+1) \cdots (i_j+k) \cdot a_{i_1, \dots, i_j+k, \dots, i_d} $$
 For some $r' < r$, Cauchy's Differentiation formula gives a bound on the derivative:
 $$\abs{\frac{\partial^k}{x_j^k}f} \leq \frac{Mk!}{(r-r')^k}$$
-Thus for example $r'=\frac{r}{2}, M'=2^k\frac{Mk!}{r}$ can be chosen accordingly.
+Thus for example $r'=\frac{r}{2}, M'=2^k\frac{Mk!}{r^k}$ can be chosen accordingly.
 \section{IVP solving}
 Consider Systems of Ordinary Differential Equations of the form
 \begin{eqnarray*}
